--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 ---
 layout: default
-title: RSM Swipe
+title: Market Man's Swipe
 ---
 <div class="blurb">
-	<h1>Hi there, I'm Robert!</h1>
+	<h1>Well hello.</h1>
+	<p> I'm Robert.  This is a place where I put my stuff.</p>
 	
 </div><!-- /.blurb -->
